...
            android:textAppearance="?android:attr/textAppearanceListItemSecondary"
            android:textColor="?android:attr/textColorAlertDialogListItem" />

    </LinearLayout>

    <ImageView
        android:id="@+id/pref"
        android:layout_width="35dip"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="false"
        android:gravity="center_vertical|center_horizontal"
        android:src="@drawable/ic_add" />
...
